# InstaMind

./: README.md  pyproject.toml
src/insta/: crew.py  main.py
src/insta/agents/: agents.py
src/insta/tools/: __init__.py  search.py
